# python-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  LICENSE  Makefile  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Containerfile  devcontainer.json  requirements.txt
.github/: CONTRIBUTING.md  README.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: anchore-analysis.yml  anchore.yml  codeql-analysis.yml  containers.yml  docker-image.yml  publish-docker.yml  python.yml
tests/: test_basic.py
