[project]
name = "acme"
version = "0.0.1"
description = "python template"
readme = ".github/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "black",
    "mypy>=0.900",
    "numpy>=1.22.0",
    "pre-commit>=2.18.0",
    "pytest>=6.0.0",
    "ruff",
    "scipy>=1.10.0",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
	"ignore::UserWarning"
]
